# KnowledgeBaseAI

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  documents.py  ingest.py  main.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/rag/: chain.py  citations.py  ingestion.py  loaders.py  retriever.py  store.py
backend/knowledgebase_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: eval_hybrid.py
backend/tests/: conftest.py  test_api_auth.py  test_api_chat.py  test_api_documents.py  test_api_ingest.py  test_chain.py  test_citations.py  test_db_connect.py  test_ingestion.py  test_loaders.py  test_models.py  test_rag_store.py  test_retriever.py
backend/tests/fixtures/: sample.md
frontend/: package-lock.json  playwright.config.ts
frontend/app/: page.tsx
frontend/app/documents/: page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  CitationPopover.tsx  DocumentList.tsx  UploadZone.tsx
frontend/lib/: api.ts  sse.ts  types.ts
frontend/tests/e2e/: chat.spec.ts
