[project]
name = "knowledgebase-ai-backend"
version = "0.1.0"
description = "Personal document Q&A system backend (FastAPI + LangChain + pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic-settings>=2.5",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-postgres>=0.0.12",
    "langchain-community>=0.3",
    "rank_bm25>=0.2",
    "pypdf>=5.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "python-multipart>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
